Redesign optional handling in `Group` clauses
Removes the `OnlyIf` collector and replace it with a more sophisticated set of
collectors to handle optional types.